[gd_scene load_steps=29 format=3 uid="uid://iviyiy2qotsm"]

[ext_resource type="Script" uid="uid://c80uwe0iluece" path="res://Temp/boss_room_1.gd" id="1_hnpp2"]
[ext_resource type="Texture2D" uid="uid://c1lo75th7b88g" path="res://Textures/icon.svg" id="1_tjvdc"]
[ext_resource type="PackedScene" uid="uid://be53snhq2r11i" path="res://Scenes/player.tscn" id="2_hnpp2"]
[ext_resource type="Script" uid="uid://c0r8ikcl8si3u" path="res://Temp/boss.gd" id="4_w82vf"]
[ext_resource type="PackedScene" uid="uid://bqo6qnqcmww4y" path="res://Scenes/UI/health_bar.tscn" id="5_sufch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w82vf"]
size = Vector2(22, 610)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly2s5"]
size = Vector2(1744, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v638s"]
size = Vector2(1191, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuilr"]
size = Vector2(711, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5y65l"]
size = Vector2(772.368, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjvdc"]
size = Vector2(237, 20)

[sub_resource type="Animation" id="Animation_hnpp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(862, 658)]
}

[sub_resource type="Animation" id="Animation_tjvdc"]
resource_name = "lower"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(862, 658), Vector2(862, 950)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w82vf"]
_data = {
&"RESET": SubResource("Animation_hnpp2"),
&"lower": SubResource("Animation_tjvdc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnpp2"]
size = Vector2(251.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8t2r"]
size = Vector2(880, 395)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvxw6"]
size = Vector2(36, 235)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya6cy"]
size = Vector2(22, 182)

[sub_resource type="Animation" id="Animation_u78rf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -179)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_71aqr"]
resource_name = "close"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -179), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vvxw6"]
resource_name = "open"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -179)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmk8r"]
_data = {
&"RESET": SubResource("Animation_u78rf"),
&"close": SubResource("Animation_71aqr"),
&"open": SubResource("Animation_vvxw6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71aqr"]
size = Vector2(116, 223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u78rf"]
size = Vector2(120, 225)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w82vf"]
radius = 13.1839
height = 172.658

[sub_resource type="Animation" id="Animation_ly2s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smash/Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Smash/Pivot/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.436332]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smash/Pivot/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w82vf"]
resource_name = "smash"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smash/Pivot/CollisionShape2D:disabled")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Smash/Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 2.0944, 2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smash/Pivot/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v638s"]
_data = {
&"RESET": SubResource("Animation_ly2s5"),
&"smash": SubResource("Animation_w82vf")
}

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_hnpp2")

[node name="Floors-Walls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(11.5, 188)
scale = Vector2(0.179687, 4.39062)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D2" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(1722, 188.25)
scale = Vector2(0.179687, 4.39453)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D3" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(861, -102)
scale = Vector2(13.625, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D4" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(863, 658)
scale = Vector2(9.309, 0.156)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D5" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(-333, 658)
scale = Vector2(5.537, 0.156)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D6" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(2096.37, 657.984)
scale = Vector2(6.02138, 0.156)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(11, 188)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(1721, 212)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(862, -102.5)
shape = SubResource("RectangleShape2D_ly2s5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(862.5, 657.5)
shape = SubResource("RectangleShape2D_v638s")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(-333.5, 658.25)
shape = SubResource("RectangleShape2D_vuilr")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(2096.18, 658.234)
shape = SubResource("RectangleShape2D_5y65l")

[node name="Trapforms" type="StaticBody2D" parent="."]
position = Vector2(862, 658)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D2" type="Sprite2D" parent="Trapforms"]
position = Vector2(720, 0)
scale = Vector2(1.89062, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D" type="Sprite2D" parent="Trapforms"]
position = Vector2(-716, -3.8147e-06)
scale = Vector2(1.85938, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(-716.5, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(720, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trapforms"]
libraries = {
&"": SubResource("AnimationLibrary_w82vf")
}

[node name="Platforms" type="StaticBody2D" parent="."]
position = Vector2(862, 491)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Platforms"]
position = Vector2(-420, 0.499994)
scale = Vector2(1.96875, 0.164062)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D2" type="Sprite2D" parent="Platforms"]
position = Vector2(420, 0.5)
scale = Vector2(1.96875, 0.164062)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms"]
position = Vector2(-420, 0)
shape = SubResource("RectangleShape2D_hnpp2")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platforms"]
position = Vector2(420, 0)
shape = SubResource("RectangleShape2D_hnpp2")
one_way_collision = true

[node name="DoorChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorChecker"]
position = Vector2(-250, 470.5)
shape = SubResource("RectangleShape2D_b8t2r")

[node name="CheckDoor" type="Timer" parent="DoorChecker"]
wait_time = 0.5
autostart = true
ignore_time_scale = true

[node name="BossBounce" type="Area2D" parent="."]
position = Vector2(865, 488)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBounce"]
position = Vector2(-838, 63.5)
shape = SubResource("RectangleShape2D_vvxw6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BossBounce"]
position = Vector2(835, 67)
shape = SubResource("RectangleShape2D_vvxw6")

[node name="Doors" type="Node2D" parent="."]

[node name="Entrance" type="StaticBody2D" parent="Doors"]
position = Vector2(0, -179)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Entrance"]
position = Vector2(11, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Entrance"]
position = Vector2(11, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="Exit" type="StaticBody2D" parent="Doors"]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Exit"]
position = Vector2(1721, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Exit"]
position = Vector2(1721, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Doors"]
libraries = {
&"": SubResource("AnimationLibrary_xmk8r")
}

[node name="ArenaCam" type="Camera2D" parent="."]
position = Vector2(867, 300)
enabled = false
zoom = Vector2(0.658, 0.658)

[node name="Player" parent="." instance=ExtResource("2_hnpp2")]
position = Vector2(739, 609)

[node name="Boss" type="CharacterBody2D" parent="." groups=["Enemies"]]
position = Vector2(968, 534)
collision_layer = 131
collision_mask = 0
script = ExtResource("4_w82vf")
speed = 60
hp = 500
max_hp = 500
parry_damage = 0
parry_knockback_mult = 0
can_be_knockedback = false
damage_number_scale = 4.0

[node name="BossSprite" type="Sprite2D" parent="Boss"]
scale = Vector2(0.998, 1.775)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_71aqr")

[node name="CollisionDamage" type="Area2D" parent="Boss"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/CollisionDamage"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_u78rf")

[node name="Smash" type="Node2D" parent="Boss"]

[node name="Pivot" type="Area2D" parent="Boss/Smash"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Smash/Pivot"]
position = Vector2(-11, -151)
rotation = -0.436332
shape = SubResource("CapsuleShape2D_w82vf")
disabled = true
debug_color = Color(0.954773, 0.175863, 0.315043, 0.42)

[node name="WeaponEnd" type="Marker2D" parent="Boss/Smash/Pivot"]
position = Vector2(-1.77312, -231.071)

[node name="ChooseAttack" type="Timer" parent="Boss"]
wait_time = 3.0
one_shot = true
autostart = true
ignore_time_scale = true

[node name="HealthBar" parent="Boss" instance=ExtResource("5_sufch")]

[node name="Attacks" type="AnimationPlayer" parent="Boss"]
libraries = {
&"": SubResource("AnimationLibrary_v638s")
}

[connection signal="timeout" from="DoorChecker/CheckDoor" to="." method="_on_check_door_timeout"]
[connection signal="body_entered" from="BossBounce" to="Boss" method="_on_boss_bounce_body_entered"]
[connection signal="body_entered" from="Boss/CollisionDamage" to="Boss" method="_on_collision_damage_body_entered"]
[connection signal="body_entered" from="Boss/Smash/Pivot" to="Boss" method="_on_smash_body_entered"]
[connection signal="timeout" from="Boss/ChooseAttack" to="Boss" method="_on_choose_attack_timeout"]
